[package]
name = "key-value-store"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
byteorder = "1.2"
crc = "1.7"
serde = "1.0.203"
serde_derive = "1.0.203"

[lib]
name = "libkeyvaluestore"
path = "src/lib.rs"

[[bin]]
name = "kvs_mem"
path = "src/kvs_mem.rs"

[[bin]]
name = "kvs_disk"
path = "src/kvs_disk.rs"